fix: hide footer on small screen

--- a/src/components/BitButton.module.css
+++ b/src/components/BitButton.module.css
@@ -8,7 +8,7 @@
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  font-size: 2.6rem;
+  font-size: 3rem;
   font-family: 'Montserrat', sans-serif;
   overflow: hidden;
 
