--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,21 @@ h1 {
   margin-bottom: 2rem;
 }
 
+.footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100vw;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  padding: .5rem;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
@@ -58,5 +73,11 @@ h1 {
   #root {
     min-width: 400px;
     width: 400px;
+  }
+}
+
+@media ((max-height: 840px) and (max-width: 1220px)) {
+  .footer {
+    display: none;
   }
 }
